fixed user-rating stars spilling over onto 2 lines

--- a/css/rate_page.css
+++ b/css/rate_page.css
@@ -61,8 +61,8 @@
 /* http://www.cssscript.com/simple-5-star-rating-system-with-css-and-html-radios/ */
 .stars {
   /*display: inline-block;*/
-  width: 240px;
-  height: 60px;
+  width: 140px;
+  height: 40px;
   margin: 0 auto;
 }
 input.star {
@@ -70,8 +70,8 @@ input.star {
 }
 label.star {
   float: right;
-  padding: 10px;
-  font-size: 30px;
+  padding: 4px;
+  font-size: 20px;
   color: #444;
   transition: all 0.2s;
 }
@@ -89,6 +89,12 @@ label.star:hover {
 label.star:before {
   content: '\f006';
   font-family: FontAwesome;
+}
+
+.text-input {
+  width: 80%;
+  height: 80px;
+  margin: 0 auto;
 }
 
 .tag-content {
